--- a/css/menu.css
+++ b/css/menu.css
@@ -17,3 +17,15 @@
 	text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 4px 3px -3px rgba(0,0,0,0.3); 
 }
+
+#nav .search input[type=text] {
+	border: 1px solid #ddd;
+	width: 220px;
+	padding: 5px;
+	box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
+}
+
+#nav .search img {
+	position: relative;
+	top: 3px;
+}
