--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 
 body {
 	background: #d5e2f7;	
+	font-family: Helvetica, arial, freesans, clean, sans-serif;
 }
 
 #wrapper {
@@ -23,10 +24,16 @@ body {
 
 .clear {
 	clear: both;
+	padding: 0;
+	margin: 0;
 }
 
 .radius {
 	border-radius: 2px;
   -webkir-border-radius: 2px;
   -moz-border-radius: 2px;
+}
+
+.shift-right {
+	margin-right: 5px;
 }
