--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3); 
 }
 
-#nav .buttons button {
+#nav .buttons button.action {
 	background: #0271c7;
 	border: none;
 	height: 28px;
@@ -18,18 +18,18 @@
 	-moz-box-shadow: 0 4px 3px -3px rgba(0,0,0,0.3); 
     -webkit-box-shadow: 0 4px 3px -3px rgba(0,0,0,0.3); 
 	box-shadow: 0 4px 3px -3px rgba(0,0,0,0.3); 
-}
-
-#nav .search input[type=text] {
-	border: 1px solid #ddd;
-	width: 220px;
-	padding: 5px;
-	-moz-box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
-    -webkit-box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
-	box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
+	cursor: pointer;
 }
 
 #nav .search img {
 	position: relative;
 	top: 3px;
+}
+
+#nav .under-button {
+	background: #015a9f !important;
+	color: #bbb !important;
+	-moz-box-shadow: inset 0 0 6px rgba(0,0,0,0.5) !important; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5) !important; 
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.5) !important; 
 }
