--- a/css/main.css
+++ b/css/main.css
@@ -54,5 +54,17 @@ input[type=text] {
     -webkit-box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
 	box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
 	width: 240px;
+	margin-top: 5px;
 }
 
+textarea {
+	margin-top: 40px;
+	resize: none;
+	overflow: hidden;
+	width: 250px;
+	height: 120px;
+	-moz-box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
+    -webkit-box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
+	box-shadow: inset 0px 2px 6px -3px rgba(0,0,0,1);
+	border: 1px solid #ddd;
+}
