--- a/css/calendar.css
+++ b/css/calendar.css
@@ -44,3 +44,7 @@
 	margin-top: 10px;
 	margin-bottom: 5px;
 }
+
+#message-of-calendar, #people-of-calendar, #description-of-calendar {
+	display: none;
+}
